# johann_plugin_example

./: .bumpversion.cfg  .cz.toml  .pre-commit-config.yaml  AUTHORS  LICENSE  MANIFEST.in  Makefile  README.md  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
johann_plugin_example/: __init__.py  config.py  tasks.py
johann_plugin_example/scores/: simple_example_1.yml
scripts/: check_copyright_headers.py
