# Copyright (c) 2020-present, The Johann Plugin Example Authors. All Rights Reserved.
# Use of this source code is governed by a BSD-3-clause license that can
# be found in the LICENSE file. See the AUTHORS file for names of contributors.

[metadata]
version = attr: johann_plugin_example.__version__

[flake8]
max-line-length = 88
exclude = .tox,.git,docs
per-file-ignores =
    __init__.py:F401
select = C,E,F,W,B,B950
ignore = E203, E501, W503
max_complexity = 10

[isort]
profile=black
known_first_party=johann,johann_plugin_example
[pylint.MESSAGES CONTROL]
disable = C0103, C0114, C0115, C0116, C0301, C0412, E0401, R0201, R0801, R0903, R0902, R0911, R0912, R0913, R0914, R0915, R1702, R1705, R1710, R1720, R1723, R1724, W0511, W0613, W0703, W1510
